--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -17,30 +17,30 @@ body {
 .carousel {
     padding-top: 6rem;
     padding-bottom: 4rem;
+    width: 100%;
+    height: auto;
     background-color: #ffb908e1;
   
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
     bottom: 3rem;
-    z-index: 10;
    
 }
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-    height: 67.72vh;
-    width: 120.40vh;
+    height: auto;
+    width: 100%;
        
 }
 .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 40%;
-    width: 100%;
-    height: 100%;
-}
 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+}
 
 
 
@@ -59,6 +59,7 @@ body {
     margin-right: .75rem;
     margin-left: .75rem;
 }
+
 
 
 /* Featurettes
