--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -15,7 +15,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-    padding-top: 6rem;
+    padding-top: 0;
     padding-bottom: 4rem;
     width: 100%;
     height: auto;
