--- a/templates/laurence/backoffice.html.twig
+++ b/templates/laurence/backoffice.html.twig
@@ -1,7 +1,7 @@
 {% extends 'backoffice.html.twig' %}
 
 {% block body %}
-<div class="container m-2 ">
+<div class="container m-1 ">
 
 
 
@@ -26,7 +26,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <div class="card w-50 ml-4 d-inline-flex">
+    <div class="card mb-3 d-inline-flex" width="37%">
         <div class="card-header font-weight-bold bg-info text-center">
             Meilleurs clients
         </div>
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div class="card w-50 ml-4 d-inline-flex">
+    <div class="card mb-3 d-inline-flex" width="37%">
         <div class="card-header font-weight-bold bg-info text-center">
             Meilleurs packs
         </div>
