--- a/templates/security/inscription.html.twig
+++ b/templates/security/inscription.html.twig
@@ -22,6 +22,9 @@
     {{ form_row(form.password) }}
     {{ form_row(form.confirm_password) }}
     {{ form_row(form.birthday) }}
+    {{ form_row(form.adresse) }}
+    {{ form_row(form.cp) }}
+    {{ form_row(form.ville) }}
 
     {{ form_end(form) }}
     </div>
