--- a/templates/laurence/gestion_reservations.html.twig
+++ b/templates/laurence/gestion_reservations.html.twig
@@ -13,15 +13,13 @@
         </div>
     </div>
     <table class="table table-striped">
-        <thead class="thead-dark">
+        <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Pack</th>
             <th scope="col">Prix</th>
             <th scope="col">Cients</th>
             <th scope="col">Date</th>
-
-            <th scope="col">Voir</th>
             <th scope="col">Modifier</th>
             <th scope="col">Supprimer</th>
         </tr>
@@ -34,8 +32,6 @@
                 <td>{{ reservation.pack.prix }}€</td>
                 <td>{{ reservation.user.username }}</td>
                 <td>{{ reservation.date | date('d-m-Y')}}</td>
-
-                <td><a href=""><img src="{{ asset('images/loupe.png') }}" alt="voir"></a></td>
                 <td><a href=""><img src="{{ asset('images/pencil.png') }}" alt="modifier"></a></td>
                 <td><a href="{{ path('suppr_reservation', {'id': reservation.id}) }}"><img src="{{ asset('images/delete.png') }}" alt="supprimer"></a></td>
             </tr>
