--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -223,21 +223,17 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 
 </div>
 
-
-		
-
-
 	<!-- AVIS -->
 	<div class="container">
 		<div>
 			<h2 class="text-center" id="avis">Avis</h2>
 		</div>
-		<div class="row mt-5 justify-self-center">
+		<div class="row mt-5">
 
 <!-- 1er avis -->
 			<div class="col-lg-4 text-center">
-       <div class="col-lg-4 text-center">
-        <img src={{asset('/images/imagesUpload/Olivia.png')}} class="" alt="6">
+       <div class="text-center">
+        <img src={{asset('/images/imagesUpload/Olivia.png')}} width="auto" class="" role="img" aria-label="profil">
       </div>
 
 			<div class="rating">
@@ -251,17 +247,17 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 	
 </div>
 
-				<h2 class="mt-4">Olivia</h2>
+				<h2 class="mt-5">Olivia</h2>
 				<p class="text-justify">
-Bonjour bonjour!
-Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
-Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+Bonjour !
+Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable.
+Comment ne pas garder ces précieux souvenirs toute une vie ! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence ?
 								</p>
 			</div>
 			<!-- 2e avis -->
 			<div class="col-lg-4 text-center">
-       <div class="col-lg-4 text-center">
-        <img src={{asset('/images/imagesUpload/eric.png')}} class="" alt="6">
+       <div class="text-center">
+        <img src={{asset('/images/imagesUpload/eric.png')}} width="auto" class="" role="img" aria-label="profil">
       </div>
 
 			<div class="rating">
@@ -275,7 +271,7 @@ Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à
 	
 </div>
 
-				<h2 class="mt-4">Eric</h2>
+				<h2 class="mt-5">Eric</h2>
 				<p class="text-justify">
 Salut !
 Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances...
@@ -283,8 +279,8 @@ Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme s
 			</div>
 			<!-- 3e avis -->
 			<div class="col-lg-4 text-center">
-       <div class="col-lg-4 text-center">
-        <img src={{asset('/images/imagesUpload/faby.png')}} class="" alt="6">
+       <div class="text-center">
+        <img src={{asset('/images/imagesUpload/faby.png')}} width="auto" class="" role="img" aria-label="profil">
       </div>
 
 			<div class="rating">
@@ -298,7 +294,7 @@ Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme s
 	
 </div>
 
-				<h2 class="mt-4">Faby</h2>
+				<h2 class="mt-5">Faby</h2>
 				<p class="text-justify">
 Hi !
 Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
@@ -309,6 +305,8 @@ Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à
 		</div>
 	
 	</div>
+
+
 
 
 {% endblock %}
