--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -230,9 +230,9 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 
 				<h2 class="mt-5">Olivia</h2>
 				<p class="text-justify">
-Bonjour bonjour!
-Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
-Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+Bonjour !
+Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable.
+Comment ne pas garder ces précieux souvenirs toute une vie ! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence ?
 								</p>
 			</div>
 			<!-- 2e avis -->
