--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -262,6 +262,8 @@ class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
 
 
 </section>       
+
+
 <!-- Back to top button -->
 <button type="button" class="btn-floating btn-lg" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
@@ -270,11 +272,21 @@ class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
 	</main>
 
 
+
 <!-- Copyright -->
 
 <div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu
 	- <a class="text-reset fw-bold" href="/"> Protection des données</a>
 		</div></footer>
+
+		{% for message in app.flashes('success') %}
+            <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
+                {{ message }}
+            </div>
+        {% endfor %}
+ {% block body %}
+ 
+        {% endblock %}
 
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
