--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,9 +45,9 @@
 		<header>
 
     <nav class="d-flex navbar-default navbar-expand-md fixed-top p-3 ">
-				<div><a href="/prisca"> <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fête un voeu" width="125">
+				<div><a href="/"> <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fête un voeu" width="125">
 					</img></a></div>
-				<div><a class="navbar-brand mt-4 ml-5" href="/prisca">Fêtes un voeu<br>...au service de vos festivités
+				<div><a class="navbar-brand mt-4 ml-5" href="/">Fêtes un voeu<br>...au service de vos festivités
 				</a></div>
 				<hr>
 					<div class="collapse navbar-collapse container-fluid" id="navbarCollapse">
@@ -93,10 +93,10 @@
 				<a href="https://github.com/PriscaR78/fetes_un_voeu" target="blank"><img src="{{asset('/images/imagesUpload/icones/github-border-dark.svg')}}" width="45em" height="45em" class="mr-5"></img></a>
 
 
-					<li class="nav-item active mr-2">
+					{# <li class="nav-item active mr-2">
 					<a href=""><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
 					</a></img>
-				
+				 #}
 			{% if app.user %}
                 <div class="nav-item dropdown my-2 my-lg-0 mr-5">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
