--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -30,7 +30,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
         </p> 		
 
 <p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -64,7 +64,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 		 Fêtes un voeu vous conseille et... 
         </p>
 <p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
@@ -95,7 +95,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 			</p>
 								
         </p><p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
@@ -125,7 +125,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
           Vous souhaitez plutôt une soirée classique autour d’un cocktail au rythme d’un rock endiablé ou une soirée à thème qui transforme vos invités en acteurs de l’évènement grâce à une activité collective ou atypique.
 
         </p><p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
@@ -278,8 +278,8 @@ Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme s
 				<h2 class="mt-5">Faby</h2>
 				<p class="text-justify">
 Hi !
-Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
-Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+Ma soirée années 90 et son ambiance « Love Power », les mines réjouies de nos invités.
+Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence ?
 								</p>
 			</div>
 		
