--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -68,7 +68,7 @@
 					</li>
 				</li>
 				<li class="nav-item active mr-5">
-					<a class="nav-link" href="#">Réservation
+					<a class="nav-link" href="{{ path('verif_dispo')}}">Réservation
 					</a>
 				</li>
 
