--- a/templates/laurence/reservation.html.twig
+++ b/templates/laurence/reservation.html.twig
@@ -59,7 +59,8 @@
     {#    {% if not app.user %}#}
     {#        redirection page connexion #}
     {#        {% else %}#}
-
+   <hr> 
+ <div class="container mt-4">
 <h2 class="mt-5">Votre réservation</h2>
     <div class="w-25 m-4">
         {{ form_start(formResa) }}
@@ -76,7 +77,7 @@
         {{ form_end(formResa) }}
 
     </div>
-
+</div>
 </div>
 
 
