--- a/templates/back/utilisateurs.html.twig
+++ b/templates/back/utilisateurs.html.twig
@@ -8,9 +8,9 @@
         </div>
     {% endfor %}
 
-    <h1 class="my-5 text-info">Utilisateurs    </h1>
+    <h1 class="my-5 text-info">Utilisateurs</h1>
 
-    <table class="table table-striped">
+    <table class="table table-striped" style="background-color: #eddcf9">
         <thead class="bg-info">
         <tr>
             <th scope="col">#</th>
