--- a/templates/security/inscription.html.twig
+++ b/templates/security/inscription.html.twig
@@ -25,6 +25,8 @@
     {{ form_row(form.adresse) }}
     {{ form_row(form.cp) }}
     {{ form_row(form.ville) }}
+    {{ form_row(form.telephone) }}
+
 
     {{ form_end(form) }}
     </div>
