--- a/templates/laurence/reservation.html.twig
+++ b/templates/laurence/reservation.html.twig
@@ -4,8 +4,8 @@
 
  <div class="container mt-4">
     <h1 class="text-center p-4" style="background-color: #eddcf9">Réservation</h1>
-    <p>Nous vous proposons de vérifier un créneau de disponibilité.
-        Ensuite, après vous être connecté(e), vous pourrez réserver votre pack.</p>
+    <p class="text-center mt-4">Nous vous proposons de vérifier un créneau de disponibilité.
+    </p>
 
     <h2>Vérifiez les disponibilités</h2>
 
@@ -61,6 +61,7 @@
     {#        {% else %}#}
    <hr> 
  <div class="container mt-4">
+  <h4 class="text-danger text-center mt-4">PENSEZ A VOUS CONNECTER POUR RESERVER VOTRE PACK !</h4>
 <h2 class="mt-5">Votre réservation</h2>
     <div class="w-25 m-4">
         {{ form_start(formResa) }}
