--- a/templates/modeleConnexion.html.twig
+++ b/templates/modeleConnexion.html.twig
@@ -53,26 +53,26 @@
 					<div class="collapse navbar-collapse container-fluid" id="navbarCollapse">
 						<ul class="navbar-nav w-100 justify-content-md-end" style="background-color:">
 							<li class="nav-item active">
-								<a class="nav-link mr-2" href="#">Accueil
+								<a class="nav-link mr-2" href="/">Accueil
 								</a>
 							</li>
 						
 							<li class="nav-item active mr-2">
-								<a class="nav-link" href="#prestations">Nos prestations
+								<a class="nav-link" href="/#prestations">Nos prestations
 								</a>
 							</li>
 							<li class="nav-item active mr-2">
-								<a class="nav-link" href="#galerie">Galerie
+								<a class="nav-link" href="/#galerie">Galerie
 								</a>
 							</li>
 						</li>
 						<li class="nav-item active mr-2">
-							<a class="nav-link" href="#avis">Avis
+							<a class="nav-link" href="/#avis">Avis
 							</a>
 						</li>
 					</li>
 					<li class="nav-item active mr-2">
-						<a class="nav-link" href="#contact">Contact
+						<a class="nav-link" href="/#contact">Contact
 						</a>
 					</li>
 				</li>
