--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,7 +53,7 @@
 					<div class="collapse navbar-collapse container-fluid" id="navbarCollapse">
 						<ul class="navbar-nav w-100 justify-content-md-end" style="background-color:">
 							<li class="nav-item active">
-								<a class="nav-link mr-2" href="#">Accueil
+								<a class="nav-link mr-2" href="/">Accueil
 								</a>
 							</li>
 						
