--- a/templates/modeleConnexion.html.twig
+++ b/templates/modeleConnexion.html.twig
@@ -99,7 +99,7 @@
 				 #}
 			{% if app.user %}
                 <div class="nav-item dropdown my-2 my-lg-0 mr-5">
-                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						{{ app.user.username }}
 
