--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,8 +98,8 @@
 					</a></img>
 				 #}
 			{% if app.user %}
-                <div class="nav-item dropdown my-2 my-lg-0 mr-5">
-                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+                <div class="nav-item dropdown my-2 my-lg-0 mr-5" >
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						{{ app.user.username }}
 
