--- a/templates/laurence/ajout_pack.html.twig
+++ b/templates/laurence/ajout_pack.html.twig
@@ -4,7 +4,7 @@
 <div class="container">
 
 
-    <h1>Ajout Pack</h1>
+    <h1 class="text-center mb-5 p-4" style="background-color: #eddcf9">Ajout Pack</h1>
 
 
         {% for message in app.flashes('success') %}
@@ -25,7 +25,7 @@
     {{ form_row(formPack.image3) }}
 
 
-    <button class="btn btn-outline-primary mb-5" type="submit">Ajouter</button>
+    <button class="btn btn-info mb-5" type="submit">Ajouter</button>
 
 
 
