--- a/templates/laurence/gestion_clients.html.twig
+++ b/templates/laurence/gestion_clients.html.twig
@@ -1,7 +1,7 @@
 {% extends 'backoffice.html.twig' %}
 
 {% block body %}
-    <h1>Gestion des clients</h1>
+    <h1 class="text-center mb-5 p-4" style="background-color: #eddcf9">Gestion des clients</h1>
     {% for message in app.flashes('success') %}
         <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
             {{ message }}
