--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -10,14 +10,15 @@
 
     {% endblock %}
 
-    <title >Back-Office</title>
+   
 </head>
 
 
 <body>
 <div class="row">
-<div style=" height: 100vh" class="col-md-2 vertical-nav bg-info pl-3" id="sidebar">
-    <nav class="ml-3">
+<div style=" height: 100vh" class="col-md-2 vertical-nav pl-3" id="sidebar">
+    <nav class="ml-3" style="background-color: #eddcf9">
+           <h3 class="text-center p-5 mt-2">Back-Office</h3>
         <ul class="nav flex-column pt-5">
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_clients') }}">Clients</a></li>
             <a class="nav-item btn btn-light m-3" href="{{ path('gestion_reservations') }}">Réservations</a>
@@ -33,11 +34,6 @@
 </div>
 
 <div class="col">
-
-<div class="container">
-    <div class="text-center my-5">
-<h1 class="text-info">Back-Office</h1>
-</div>
 
 
 {% block body %}
