--- a/templates/security/connexion.html.twig
+++ b/templates/security/connexion.html.twig
@@ -9,7 +9,7 @@
         </div>
     {% endfor %}
 
-<div class="container m-5">
+<div class="container mt-4">
 <h1 class="text-center p-4" style="background-color: #eddcf9">Se connecter</h1>
 
     <form action="{{ path('login') }}" method="post" class="col-md-10 mt-5 w-50">
