--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -21,7 +21,7 @@
            <h3 class="text-center p-5 mt-2">Back-Office</h3>
         <ul class="nav flex-column pt-3 pb-5">
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_clients') }}">Clients</a></li>
-            <a class="nav-item btn btn-light m-3" href="{{ path('gestion_reservations') }}">Réservations</a>
+            <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark"  href="{{ path('gestion_reservations') }}">Réservations</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_packs') }}">Packs</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="#">Soutien</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark " href="#">Contact</a></li>
