--- a/templates/laurence/gestion_reservations.html.twig
+++ b/templates/laurence/gestion_reservations.html.twig
@@ -1,7 +1,8 @@
 {% extends 'backoffice.html.twig' %}
 
 {% block body %}
-    <h1 class="text-center mb-5 p-4" style="background-color: #eddcf9">Gestion des réservations</h1>
+<div class="container">
+    <h1 class="text-center mt-5 mb-5 p-4" style="background-color: #eddcf9">Gestion des réservations</h1>
     {% for message in app.flashes('success') %}
         <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
             {{ message }}
@@ -9,7 +10,7 @@
     {% endfor %}
     <div class="row justify-content-end">
         <div class="col-md-3">
-            <a class="btn btn-info my-3 " href="{{ path('verif_dispo') }}">Ajouter une nouvelle réservation</a>
+            <a class="btn btn-info my-3 mr-2" href="{{ path('verif_dispo') }}">Ajouter une nouvelle réservation</a>
         </div>
     </div>
     <table class="table table-striped">
@@ -38,5 +39,6 @@
         {% endfor %}
         </tbody>
     </table>
+    </div>
 
 {% endblock %}
