--- a/templates/paiement.html.twig
+++ b/templates/paiement.html.twig
@@ -4,65 +4,15 @@
 {% block body %}
 
  <div class="container mt-4">
-    <h1 class="text-center p-4" style="background-color: #eddcf9">Réservation</h1>
-    <p class="text-center mt-3">Nous vous proposons de vérifier un créneau de disponibilité.
-    </p>
-
-    <h2 class="mt-5">Vérifiez les disponibilités</h2>
-
-    {% for message in app.flashes('success') %}
-    <div class="col-md-6 bg-primary p-4 rounded mx-auto text-center text-white mb-3">
-        {{ message }}
-    </div>
-{% endfor %}
-
-    {% for message in app.flashes('danger') %}
-        <div class="col-md-6 bg-danger p-4 rounded mx-auto text-center text-white mb-3">
-            {{ message }}
-        </div>
-
-    {% endfor %}
-    {% if requete == true %}
-        Ce pack n'est pas disponible aux dates suivantes :
-        <ul>
-            {% for reservation in reservations %}
-                <li>  {{ reservation.date | date('d-m-Y') }} </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    <form action=" {{ path('verif_dispo')}} " method="get">
-
-        <label class="my-3" for="pack">Quel pack avez-vous choisi ?</label>
-
-        <select name="pack" class="form-control w-25" id="verif_pack">
-            <option value=""></option>
-            {% for pack in packs %}
-                <option value="{{ pack.id }}">{{ pack.nom }}</option>
-            {% endfor %}
-        </select>
-
-        <label class="my-3" for="date">Entre quelles dates désirez-vous réserver ?</label>
-        <p>  <input type="date"  name="date_debut" min={{ resa_min }}  max={{ resa_max }}>
-            <input type="date" name="date_fin" min={{ resa_min }} max={{ resa_max }}></p>
-
-        <button class="btn btn-info mt-4 mb-4" type="submit">Vérifier</button>
-
-    </form>
-
-
-    {% for message in app.flashes('success') %}
-        <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
-            {{ message }}
-        </div>
-    {% endfor %}
-
+    <h1 class="text-center p-4" style="background-color: #eddcf9">Paiement</h1>
+ 
 
     {#    {% if not app.user %}#}
     {#        redirection page connexion #}
     {#        {% else %}#}
    <hr> 
  <div class="container mt-4">
-  <h4 class="text-danger text-center mt-4">PENSEZ A VOUS CONNECTER POUR RESERVER VOTRE PACK !</h4>
+  <h4 class="text-danger text-center mt-4">PAGE PAIEMENT</h4>
 <h2 class="mt-5">Votre réservation</h2>
     <div class="w-25 p-4">
         {{ form_start(formResa) }}
@@ -73,7 +23,7 @@
         {{ form_row(formResa.pack) }}
 
 
-        <button class="btn btn-info mt-4 mb-4" type="submit">Ajouter</button>
+        <button class="btn btn-info mt-4 mb-4" type="submit">Payer</button>
         {#{% endif %}#}
 
         {{ form_end(formResa) }}
