--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,17 +65,17 @@
 								<a class="nav-link" href="#galerie">Galerie
 								</a>
 							</li>
-						</li>
+					
 						<li class="nav-item active mr-2">
 							<a class="nav-link" href="#avis">Avis
 							</a>
 						</li>
-					</li>
+					
 					<li class="nav-item active mr-2">
 						<a class="nav-link" href="#contact">Contact
 						</a>
 					</li>
-				</li>
+			
 				<li class="nav-item active mr-5">
 					<a class="nav-link" href="{{ path('verif_dispo')}}">Réservation
 					</a>
@@ -88,9 +88,9 @@
 
 				<!-- Section: Social media -->
 
-				<a href="https://www.facebook.com/fetesvosvoeux" target="blank"><img src="{{asset('/images/imagesUpload/icones/facebook.svg')}}" width="40em" height="40em" class="mr-2"></img></a>
-				<a href="https://www.instagram.com/fetes_unvoeu/?hl=fr" target="blank"><img src="{{asset('/images/imagesUpload/icones/instagram-orange.svg')}}" width="40em" height="40em" class="mr-2" ></img></a>
-				<a href="https://github.com/PriscaR78/fetes_un_voeu" target="blank"><img src="{{asset('/images/imagesUpload/icones/github-border-dark.svg')}}" width="45em" height="45em" class="mr-5"></img></a>
+				<a href="https://www.facebook.com/fetesvosvoeux" target="blank"><img src="{{asset('/images/imagesUpload/icones/facebook.svg')}}" width="40em" height="40em" class="mr-2"></a>
+				<a href="https://www.instagram.com/fetes_unvoeu/?hl=fr" target="blank"><img src="{{asset('/images/imagesUpload/icones/instagram-orange.svg')}}" width="40em" height="40em" class="mr-2" ></a>
+				<a href="https://github.com/PriscaR78/fetes_un_voeu" target="blank"><img src="{{asset('/images/imagesUpload/icones/github-border-dark.svg')}}" width="45em" height="45em" class="mr-5"></a>
 
 
 					{# <li class="nav-item active mr-2">
